stylesheets/topics.scss
:root {
  --d-topic-list-likes-views-posts-width: fit-content;
  --d-table-border-top-height: 0;
  --d-topic-list-data-padding-inline-start: 0;
}

.topic-list {
  display: flex;
  flex-flow: column nowrap;
}

.topic-list-header {
  height: 64px;

  tr {
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
  }
}

.topic-list-body {
  display: flex;
  flex-flow: column nowrap;
  row-gap: var(--space-2);
  padding-top: var(--space-2);
}

.topic-list-item {
  display: grid;
  grid-template-columns: min-content min-content min-content min-content auto min-content;
  grid-template-areas:
    "avatar title title title title select"
    ". replies views activity _ select";
  column-gap: var(--space-2);
  padding: var(--space-3);
  border: 1px solid var(--content-border-color);
  border-radius: var(--d-border-radius);

  .topic-list-data {
    height: fit-content;
    width: fit-content;
    padding: var(--space-1) !important;

    a {
      padding: 0 !important;
    }
  }

  .posters {
    grid-area: avatar;
    width: auto;
  }

  .main-link {
    grid-area: title;
  }

  .posts {
    grid-area: replies;
  }

  .views {
    grid-area: views;
  }

  .activity {
    grid-area: activity;
  }

  .bulk-select {
    grid-area: select;
  }
}

